# dream_forge_AI

./: .env.example  .gitignore  COPILOT.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: Dockerfile  alembic.ini  dreamforge.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_portrait_content_json.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  character_agent.py  consistency_agent.py  council_agent.py  lore_agent.py  narrative_agent.py  planner.py  schemas.py  story_normalize.py
backend/app/api/: entities.py  universes.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/demo/: responses.py  seed.py
backend/app/engines/: __init__.py  graph.py
backend/app/evaluation/: __init__.py  scorer.py
backend/app/orchestrator/: __init__.py  workflow.py
backend/app/schemas/: __init__.py  entities.py  universe.py
backend/app/services/: __init__.py  embeddings.py  llm.py  portrait.py  suggester.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/hooks/: useStoryNarrator.ts  useUniverseVisualContext.ts
frontend/lib/: api.ts  entity-art.ts  narrator-settings.ts  story-narration.ts  story-parser.ts  visual-prompts.ts
mcp-server/: index.ts  package-lock.json  package.json  test-tools.js  tsconfig.json
mcp-server/src/: api-client.ts  config.ts  enrichers.ts  (+5 more)
(+73 files in other folders)
